--- a/src/css/navBar.css
+++ b/src/css/navBar.css
@@ -17,3 +17,17 @@ header {
   justify-content: space-around;
   align-items: center;
 }
+
+/* .search{
+  border: 1px solid red;
+  width: 15%;
+  position: absolute;
+  top: 2rem;
+  right: 0;
+ display: flex;
+ justify-content: space-around;
+}
+
+.prova {
+  color: red;
+} */
