--- a/src/css/navBar.css
+++ b/src/css/navBar.css
@@ -1,3 +1,9 @@
+/* body,
+html {
+  width: 100%;
+  height: 100%;
+} */
+
 .burgerLines {
   width: 35px;
   height: 5px;
@@ -9,9 +15,13 @@ header {
   border: 1px solid red;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  /* margin-left: 0;
+  top: 0; */
 }
 
-.burger__countries {
+.burger-and-country {
   width: 20%;
   display: flex;
   justify-content: space-around;
