--- a/src/css/countries.css
+++ b/src/css/countries.css
@@ -4,14 +4,15 @@
 } */
 
 table {
-  border-block: solid;
   border-collapse: separate;
-  border-spacing: 0 2em;
+  border-spacing: 0 1.5rem;
   table-layout: fixed;
 }
 
-.countryHeadings {
-  border-block: solid;
+.countryTableHeadings,
+.countryTableHeadings td,
+.countryTableBody td {
+  border-bottom: thin solid;
 }
 
 .rightArrow {
@@ -20,8 +21,5 @@ table {
 
 .flags {
   width: 6rem;
-}
-
-.countryHeadings {
   margin-bottom: 1rem;
 }
