--- a/src/css/navBar.css
+++ b/src/css/navBar.css
@@ -13,6 +13,8 @@ html {
 
 header {
   border: 1px solid red;
+  color: white;
+  background-color: rgb(30, 167, 247);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -28,16 +30,26 @@ header {
   align-items: center;
 }
 
-/* .search{
-  border: 1px solid red;
-  width: 15%;
-  position: absolute;
-  top: 2rem;
-  right: 0;
- display: flex;
- justify-content: space-around;
+.search-bar {
+  width: 20%;
+  padding: 10px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
 }
 
-.prova {
-  color: red;
+.search-bar input {
+  margin-left: 0.5rem;
+  border: none;
+  outline: none;
+}
+
+/* .search-bar {
+  border: 1px solid red;
+  width: 20%;
+
+  top: 2rem;
+  right: 0;
+  display: flex;
+  justify-content: space-around;
 } */
