--- a/src/css/countries.css
+++ b/src/css/countries.css
@@ -9,6 +9,10 @@ table {
   table-layout: fixed;
 }
 
+.flagText {
+  border-left: 0.5rem solid transparent;
+}
+
 .countryTableHeadings,
 .countryTableHeadings td,
 .countryTableBody td {
@@ -21,5 +25,6 @@ table {
 
 .flags {
   width: 6rem;
+  margin-left: 0.5rem;
   margin-bottom: 1rem;
 }
